# LFU_CACHE

./: CACHE_TESTS.cpp  CMakeLists.txt  LFU.h  LFU_main.cpp  PERFECT_CACHE.h  PERFECT_main.cpp  README.md  perf.py
TEST_DIR/: t.py  test_0_ans_1_8  test_100_ans_2_16  test_101_ans_104_362  test_102_ans_372_581  test_103_ans_179_312  test_104_ans_29_164  test_105_ans_11_62  test_106_ans_50_206  test_107_ans_20_88  test_108_ans_2_15  test_109_ans_70_332  test_10_ans_106_282  test_110_ans_91_322  test_111_ans_24_149  test_112_ans_62_240  test_113_ans_74_256  test_114_ans_46_165  test_115_ans_178_298  test_116_ans_53_248  test_117_ans_54_230  test_118_ans_33_113  test_119_ans_74_329  test_11_ans_69_284  test_120_ans_12_37  test_121_ans_34_224  test_122_ans_25_183  test_123_ans_9_78  test_124_ans_0_0  test_125_ans_23_119  test_126_ans_18_88  test_127_ans_2_4  test_128_ans_150_375  test_129_ans_129_326  test_12_ans_1_10  test_130_ans_64_261  test_131_ans_9_54  test_132_ans_15_42  test_133_ans_4_31  test_134_ans_13_90  (+211 more)
